--- a/homepage.html
+++ b/homepage.html
@@ -4,10 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equive="X-UA-Compatible" content="IE=edge">
 		<title>Wild Code School</title>
-		<meta name="description" content="Lorem ipsum.">
-		<link rel="stylesheet" href="">
-		<link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,600">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+		<meta name="description" content="ecole de code">
+		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/style.css">
 	    <!--[if lt IE 9]>
 	    	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -16,24 +14,29 @@
 	    <link href="favicon.png" rel="icon">
 	</head>
 	<body>
-		<head>
+	<div class="container" id="bg_img_1">
+		<div class="row" id="menu">
+			<div class="col-md-1 col-md-offset-1" id="logo">
+				<a href="#"><img src="" alt="logo"></a>
+			</div>
+			<div class="col-md-5 col-md-offset-5">
+				<ul>
+					<li><a href="notre_programme">Notre programme</a></li>
+					<li><a href="eleves">Eleves</a></li>
+					<li><a href="entreprise">entreprise</a></li>
+					<li><a href="Ouvrire_une_wcs">Ouvrire une WCS</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="row" id="accroche">
+				<h1>Go to the transition</h1>
+			</div>
+			<div class="row" id="bouton">
+				<h2><a href="" alt="je candidate">Je candidate</a></h2>
+			</div>
+	</div>
 
-			<a href="#"><img src="" alt="logo"></a>
-
-
-			<ul>
-				<li><a href="notre_programme">Notre programme</a></li>
-				<li><a href="eleves">Eleves</a></li>
-				<li><a href="entreprise">entreprise</a></li>
-				<li><a href="Ouvrire_une_wcs">Ouvrire une WCS</a></li>
-			</ul>
-
-			<h1>Go to the transition</h1>
-			<h2><a href="" alt="je candidate"></a></h2>
-
-		</head>
-
-		<div class="bg">
+		<div class="row">
 
 			<div id="concetp">
 				<h2>Le Concept</h2>
