Ajout bloc concept + IMG

--- a/homepage.html
+++ b/homepage.html
@@ -35,5 +35,26 @@
 				<h2><a href="" alt="je candidate">Je candidate</a></h2>
 			</div>
 		</div>
+		<div class="container" id="concept">
+			<h2>Le concept</h2>
+			<div class ="row">
+				<div class="col-md-3 col-sm-6 col-xs-12">
+					<img src="img/concept/handshake-black-50.png" alt="#" />
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12">
+					<img src="img/concept/screencode-black-50.png" alt="#" />
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12">
+					<img src="img/concept/screwdriver-black-50.png" alt="#" />
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12">
+					<img src="img/concept/sofa-black-50.png" alt="#" />
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
