--- a/homepage.html
+++ b/homepage.html
@@ -13,21 +13,20 @@
 	    <![endif]-->
 	    <link href="favicon.png" rel="icon">
 	</head>
+
 	<body>
 		<div class="container" id="bg_img_1">
-			<div class="row" id="menu">
+			<nav class="navbar navbar-default navbar-fixed-top" id="nav_bar">
 				<div class="col-md-1 col-md-offset-1" id="logo">
-					<a href="#"><img src="" alt="logo"></a>
+					<a href="homepage.html"><img src="img/logo.png" alt="logo"></a>
 				</div>
-				<div class="col-md-5 col-md-offset-5">
-					<ul>
-						<li><a href="notre_programme">Notre programme</a></li>
-						<li><a href="eleves">Eleves</a></li>
-						<li><a href="entreprise">entreprise</a></li>
-						<li><a href="Ouvrire_une_wcs">Ouvrire une WCS</a></li>
-					</ul>
+				<div class="col-md-5 col-md-offset-4" id="menu">
+					<div class="col-md-3"><a href="notre_programme">Notre programme</a></div>
+					<div class="col-md-3"><a href="eleves">Eleves</a></div>
+					<div class="col-md-3"><a href="entreprise">entreprise</a></div>
+					<div class="col-md-3"><a href="Ouvrire_une_wcs">Ouvrire une WCS</a></div>
 				</div>
-			</div>
+			</nav>
 			<div class="row" id="accroche">
 				<h1>Go to the transition</h1>
 			</div>
