--- a/homepage.html
+++ b/homepage.html
@@ -35,5 +35,26 @@
 				<h2><a href="" alt="je candidate">Je candidate</a></h2>
 			</div>
 		</div>
+
+		<div class="row" id="video">
+			<div class="col-xs-12 col-sm-6 col-md-6">
+				<h2>une ecole de code et une startup</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vestibulum ipsum ut varius ullamcorper. Quisque quis feugiat dolor, vel rhoncus elit. Nunc vel ultrices ipsum. Nullam eu neque interdum, gravida libero sit amet, bibendum velit. Suspendisse suscipit, risus in vulputate hendrerit, mi nisi elementum odio, et venenatis sem nibh vel ligula. Duis dignissim dignissim mattis. Fusce sit amet ligula odio.</p>
+			</div>
+
+			
+			<div class="col-xs-12 col-sm-6 col-md-6" id="vid">
+				<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/p7Yoj96nuhA" frameborder="0" allowfullscreen></iframe></div>
+			</div>
+		</div>
+
+		<div class="container" id="event">
+
+			<h2>suivez nous</h2>
+				
+
+			<div class="twitter"></div>
+			
+		</div>
 	</body>
 </html>
