Préparation bloc Slider + Newsletter

--- a/homepage.html
+++ b/homepage.html
@@ -56,8 +56,22 @@
 				</div>
 			</div>
 		</div>
-		<div class="container" id="newsletter">
-			<!-- Code newsletter, ici-->
+		<div class="container" id="evenement"> 
+			<div class="row">
+				<div class="col-xs-12 col-sm-6" id="slider">
+					<p>ICI SERA PLACER LE SLIDER A DEVELOPPER
+					ICI SERA PLACER LE SLIDER A DEVELOPPER
+					ICI SERA PLACER LE SLIDER A DEVELOPPER
+					ICI SERA PLACER LE SLIDER A DEVELOPPER</p>
+				</div>
+				<div class="col-xs-12 col-sm-6" id="newsletter">
+					<p>Abonnez-vous et restez informé ! ;)</p>
+					<form method="#" action="#">
+						<input type="email" placeholder="Entrez votre e-mail"/>
+						<input type="submit" value="->"/>
+					</form>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
