--- a/homepage.html
+++ b/homepage.html
@@ -11,29 +11,41 @@
 	    	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	    	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	    <![endif]-->
-	    <link href="favicon.png" rel="icon">
+	    <link href="#" rel="icon">
 	</head>
 
 	<body>
-		<div class="container" id="bg_img_1">
-			<nav class="navbar navbar-default navbar-fixed-top" id="nav_bar">
-				<div class="col-md-1 col-md-offset-1" id="logo">
-					<a href="homepage.html"><img src="img/logo.png" alt="logo"></a>
+		<div class="container bandeau_1">
+			<div class="row">
+				<div class="navbar navbar-fixed-top">
+					<div class="container nav_bar_contain">
+						<div class="navbar-header">
+							<a href="#" class="navbar-brand"><img src="img/logo.png" alt="logo wcs"/></a>
+							<button class="navbar-toggle nav_bar_bouton" data-toggle="collapse" data-target=".navHeaderCollapse">
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+						</div>
+						<div class="collapse navbar-collapse navHeaderCollapse nav_bar_menu">
+							<ul class="nav navbar-nav navbar-right">
+								<li><a href="#">NOTRE PROGRAMME</a></li>
+								<li><a href="#">ELEVES</a></li>
+								<li><a href="#">PARTENAIRE</a></li>
+								<li><a href="#">OUVRIR UNE ECOLE</a></li>
+							</ul>
+						</div>
+					</div>
 				</div>
-				<div class="col-md-5 col-md-offset-4" id="menu">
-					<div class="col-md-3"><a href="notre_programme">Notre programme</a></div>
-					<div class="col-md-3"><a href="eleves">Eleves</a></div>
-					<div class="col-md-3"><a href="entreprise">entreprise</a></div>
-					<div class="col-md-3"><a href="Ouvrire_une_wcs">Ouvrire une WCS</a></div>
-				</div>
-			</nav>
-			<div class="row" id="accroche">
+			</div>
+			<div class="row accroche">
 				<h1>Go to the transition</h1>
 			</div>
-			<div class="row" id="bouton">
-				<h2><a href="#" alt="je candidate">Je candidate</a></h2>
+			<div class="row bouton">
+				<h2><a href="#" alt="je candidate"><span class"bouton_candidat">&#8249; Je candidate /&#8250;</span></a></h2>
 			</div>
 		</div>
+
 		<div class="container" id="concept">
 			<h2>Le concept</h2>
 			<div class ="row">
@@ -58,5 +70,6 @@
 		<div class="container" id="newsletter">
 			<!-- Code newsletter, ici-->
 		</div>
+
 	</body>
 </html>
