--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="ecole de code">
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900,600,300|Source+Code+Pro:400,500,600,700,900,300' rel='stylesheet' type='text/css'>
 	    <!--[if lt IE 9]>
 	    	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	    	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -55,9 +56,6 @@
 				</div>
 			</div>
 		</div>
-
-		<div class="container" id="newsletter">
-			<!-- Code newsletter, ici-->
 
 		<div class="row" id="video">
 			<div class="col-xs-12 col-sm-6 col-md-6">
