--- a/homepage.html
+++ b/homepage.html
@@ -67,15 +67,51 @@
 				</div>
 			</div>
 		</div>
-		<div class="container" id="newsletter">
-			<!-- Code newsletter, ici-->
 
 		<div class="row" id="video">
 			<div class="col-xs-12 col-sm-6 col-md-6">
 				<h2>une ecole de code et une startup</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vestibulum ipsum ut varius ullamcorper. Quisque quis feugiat dolor, vel rhoncus elit. Nunc vel ultrices ipsum. Nullam eu neque interdum, gravida libero sit amet, bibendum velit. Suspendisse suscipit, risus in vulputate hendrerit, mi nisi elementum odio, et venenatis sem nibh vel ligula. Duis dignissim dignissim mattis. Fusce sit amet ligula odio.</p>
 			</div>
+			 <div class="container"> 
+      <div class="row vcenter">
+        <div class="col-md-3"> 
+          <img class="tem1" src= "tem1.jpg"/>
+        </div>
+        <div class="col-md-9">
+          <p class="paragraph" text align="right" >
+          Sed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de amicitia. Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens (sic enim est habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium loqui ipsum putes.>>
 
+          <br><br>Prénom Nom, Age, promo n°2
+          </p>
+        </div>
+      </div>
+      <div class="row vcenter2">
+          <div class="col-md-9 texte-left">
+          <p class="para" text align="right">
+            Sed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de amicitia. Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens (sic enim est habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium loqui.>>
+          <br><br>Prénom Nom, Age, promo n°2
+          </p>
+          
+          </div>
+          <div class="col-md-3">
+            <img class="tem2" src="tem2.jpg"/>
+        </div>
+      </div>
+      <div class="row vcenter3">
+        <div class="col-md-3 text-right">
+          <img class= "tem3" src="tem3.jpg"/>
+          </div>
+          <div class="col-md-9">
+          <p class="parag" text align="right">
+            Sed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de amicitia. Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens (sic enim est habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium loqui.>>
+          
+          <br><br>Prénom Nom, Age, promo n°2
+          </p>
+        </div>
+        </div>
+      </div>
+    </div>
 			
 			<div class="col-xs-12 col-sm-6 col-md-6" id="vid">
 				<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/p7Yoj96nuhA" frameborder="0" allowfullscreen></iframe></div>
