Ajout fichier img, finalisation partie concept, correction css général

--- a/homepage.html
+++ b/homepage.html
@@ -47,27 +47,27 @@
 			</div>
 		</div>
 
-		<div class="container" id="concept">
-			<h2>Le concept</h2>
+		<div class="container" id="concept"> <!-- $ SECTION CONCEPT  -->
+			<h1>Le concept</h1>
 			<div class ="row">
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<img src="img/concept/handshake-black-50.png" alt="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+					<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<img src="img/concept/screencode-black-50.png" alt="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+					<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<img src="img/concept/screwdriver-black-50.png" alt="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+					<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<img src="img/concept/sofa-black-50.png" alt="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+					<p>HTML, CSS, RUBY, PHP, JavaScript... Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’apprentissage : la création d’un site statique, d’une application web dynamique, l’apprentissage d’un langage de programmation puis la réalisation d’un projet de fin d’étude.</p>
 				</div>
-			</div>
-		</div>
+			</div>  <!-- FIN DIV .row -->
+		</div>   <!--FIN DIV .containre #CONCEPT -->
 
 		<div class="row" id="video">
 			<div class="col-xs-12 col-sm-6 col-md-6">
