--- a/homepage.html
+++ b/homepage.html
@@ -22,7 +22,7 @@
 					<div class="container nav_bar_contain">
 						<div class="navbar-header">
 							<a href="#" class="navbar-brand"><img src="img/logo.png" alt="logo wcs"/></a>
-							<button class="navbar-toggle nav_bar_bouton" data-toggle="collapse" data-target=".navHeaderCollapse">
+							<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
@@ -139,4 +139,6 @@
 			</div>
 		</div>
 	</body>
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.js"></script>
 </html>
