prépar news letter

--- a/homepage.html
+++ b/homepage.html
@@ -116,12 +116,7 @@
 				</div>
 			</div>
 		</div>
-			
-		<div class="container" id="event">
-			<h2>suivez nous</h2>
-			<div class="twitter"></div>
-
-		<div class="container" id="evenement"> 
+		<div class="container" id="evenement"> <!-- DEBUT SECTION EVENEMENTS -->
 			<div class="row">
 				<div class="col-xs-12 col-sm-6" id="slider">
 					<p>ICI SERA PLACER LE SLIDER A DEVELOPPER
