--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
 	</head>
 
 	<body>
-		<div class="container bandeau_1">
+		<div class="container header">
 			<div class="row">
 				<div class="navbar navbar-fixed-top">
 					<div class="container nav_bar_contain">
@@ -135,6 +135,66 @@
 						<input type="email" placeholder="Entrez votre e-mail"/>
 						<input type="submit" value="->"/>
 					</form>
+				</div>
+			</div>
+		</div>
+
+		<div class="container footer">
+			<div class="row">
+				<div class="col-md-2 col-sm-4 col-xs-12">
+					<ul>
+						<li class="first_field">NOTRE MÉTHODE</li>
+						<li>Notre approche pédagogique</li>
+						<li>Le programme</li>
+						<li>La plateforme pédagogique</li>
+						<li>L’innovation continue</li>
+					</ul>
+				</div>
+				<div class="col-md-2 col-sm-4 col-xs-12">
+					<ul>
+						<li class="first_field">ÉLÈVES</li>
+						<li>Intégrer l’école</li>
+						<li>Je candidate!</li>
+						<li>Les débouchés</li>
+						<li>Le financement</li>
+						<li>L’internat</li>
+						<li>La promo 2015</li>
+						<li>FAQ</li>
+					</ul>
+				</div>
+				<div class="col-md-2 col-sm-4 col-xs-12">
+					<ul>
+						<li class="first_field">PARTENAIRES</li>
+						<li>Faire un projet avec nous</li>
+						<li>Devenir mentor</li>
+						<li>Embaucher un étudiant</li>
+						<li>Soutenir l’école</li>
+						<li>Nos partenaires</li>
+					</ul>
+				</div>
+				<div class="col-md-2 col-sm-4 col-xs-12">
+					<ul>
+						<li class="first_field">OUVRIR UNE ÉCOLE</li>
+						<li>Une école sur votre territoire</li>
+						<li>Qui fait quoi ?</li>
+						<li>La gouvernance</li>
+					</ul>
+				</div>
+				<div class="col-md-2 col-sm-4 col-xs-12">
+					<ul>
+						<li class="first_field">À PROPOS</li>
+						<li>Notre mission</li>
+						<li>L’équipe</li>
+						<li>Presse</li>
+						<li>Rejoignez-nous !</li>
+						<li>Blog</li>
+						<li>Contact</li>
+					</ul>	
+				</div>
+				<div class="col-md-2 col-sm-4 col-xs-12">
+					<ul>
+						<li class="copyright">Copyright © Innoveduc</li>
+					</ul>
 				</div>
 			</div>
 		</div>
