--- a/homepage.html
+++ b/homepage.html
@@ -118,20 +118,29 @@
 		</div>
 		<div class="container" id="evenement"> <!-- DEBUT SECTION EVENEMENTS -->
 			<div class="row">
-				<div class="col-xs-12 col-sm-6" id="slider">
+				<div class="col-xs-12 col-sm-5" id="slider">
 					<p>ICI SERA PLACER LE SLIDER A DEVELOPPER
 					ICI SERA PLACER LE SLIDER A DEVELOPPER
 					ICI SERA PLACER LE SLIDER A DEVELOPPER
 					ICI SERA PLACER LE SLIDER A DEVELOPPER</p>
 				</div>
-				<div class="col-xs-12 col-sm-6" id="newsletter">
-					<p>Abonnez-vous et restez informé ! ;)</p>
+				<div class="col-xs-12 col-sm-7" id="newsletter">
+					<h1>Suivez-nous !</h1>
+					<div class="social">
+					<img src="img/concept/screencode-black-50.png" alt="#" />
+					<img src="img/concept/screencode-black-50.png" alt="#" />
+					<img src="img/concept/screencode-black-50.png" alt="#" />
+					<img src="img/concept/screencode-black-50.png" alt="#" />
+					<img src="img/concept/screencode-black-50.png" alt="#" />
+					<img src="img/concept/screencode-black-50.png" alt="#" />
+					</div>
+					<p>Abonnez-vous à notre newsletter & restez informé</p>
 					<form method="#" action="#">
 						<input type="email" placeholder="Entrez votre e-mail"/>
-						<input type="submit" value="->"/>
+						<input src="img/arrow-right.png" type="image" Value="submit" align="middle"/>
 					</form>
 				</div>
 			</div>
-		</div>
+		</div><!-- FIN DIV #EVENEMENT -->
 	</body>
 </html>
