--- a/homepage.html
+++ b/homepage.html
@@ -16,127 +16,132 @@
 	</head>
 
 	<body>
-		<div class="container bandeau_1">
-			<div class="row">
-				<div class="navbar navbar-fixed-top">
-					<div class="container nav_bar_contain">
-						<div class="navbar-header">
-							<a href="#" class="navbar-brand"><img src="img/logo.png" alt="logo wcs"/></a>
-							<button class="navbar-toggle nav_bar_bouton" data-toggle="collapse" data-target=".navHeaderCollapse">
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-						</div>
-						<div class="collapse navbar-collapse navHeaderCollapse nav_bar_menu">
-							<ul class="nav navbar-nav navbar-right">
-								<li><a href="#">NOTRE PROGRAMME</a></li>
-								<li><a href="#">ELEVES</a></li>
-								<li><a href="#">PARTENAIRE</a></li>
-								<li><a href="#">OUVRIR UNE ECOLE</a></li>
-							</ul>
-						</div>
+		<div class="container">
+			<div class="navbar navbar-fixed-top">
+				<div class="container nav_bar_contain">
+					<div class="navbar-header">
+						<a href="#" class="navbar-brand"><img src="img/logo.png" alt="logo wcs"/></a>
+						<button class="navbar-toggle nav_bar_bouton" data-toggle="collapse" data-target=".navHeaderCollapse">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+					</div>
+					<div class="collapse navbar-collapse navHeaderCollapse nav_bar_menu">
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="#">NOTRE PROGRAMME</a></li>
+							<li><a href="#">ELEVES</a></li>
+							<li><a href="#">PARTENAIRE</a></li>
+							<li><a href="#">OUVRIR UNE ECOLE</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
-			<div class="row accroche">
-				<h1>Go to the transition</h1>
-			</div>
-			<div class="row bouton">
-				<h2><a href="#" alt="je candidate"><span class"bouton_candidat">&#8249; Je candidate /&#8250;</span></a></h2>
-			</div>
-		</div>
 
-		<div class="container" id="concept">
-			<h2>Le concept</h2>
-			<div class ="row">
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<img src="img/concept/handshake-black-50.png" alt="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+			<section id="bandeau">
+				<div class="accroche">
+					<h1>Go to the transition</h1>
 				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<img src="img/concept/screencode-black-50.png" alt="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+				<div class="bouton">
+					<h2><a href="#" alt="je candidate"><span class"bouton_candidat">&#8249; Je candidate /&#8250;</span></a></h2>
 				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<img src="img/concept/screwdriver-black-50.png" alt="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<img src="img/concept/sofa-black-50.png" alt="#" />
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
-				</div>
-			</div>
-		</div>
+			</section>
 
-		<div class="row" id="video">
-			<div class="col-xs-12 col-sm-6 col-md-6">
-				<h2>une ecole de code et une startup</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vestibulum ipsum ut varius ullamcorper. Quisque quis feugiat dolor, vel rhoncus elit. Nunc vel ultrices ipsum. Nullam eu neque interdum, gravida libero sit amet, bibendum velit. Suspendisse suscipit, risus in vulputate hendrerit, mi nisi elementum odio, et venenatis sem nibh vel ligula. Duis dignissim dignissim mattis. Fusce sit amet ligula odio.</p>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-6" id="vid">
-				<div class="video-container">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/p7Yoj96nuhA" frameborder="0" allowfullscreen></iframe>
+			<section id="concept">
+				<h2>Le concept</h2>
+				<div class ="row">
+					<div class="col-md-3 col-sm-6 col-xs-12">
+						<img src="img/concept/handshake-black-50.png" alt="#" />
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+					</div>
+					<div class="col-md-3 col-sm-6 col-xs-12">
+						<img src="img/concept/screencode-black-50.png" alt="#" />
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+					</div>
+					<div class="col-md-3 col-sm-6 col-xs-12">
+						<img src="img/concept/screwdriver-black-50.png" alt="#" />
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+					</div>
+					<div class="col-md-3 col-sm-6 col-xs-12">
+						<img src="img/concept/sofa-black-50.png" alt="#" />
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultrices porttitor interdum. Suspendisse potenti. Vestibulum ipsum odio, tristique id tincidunt luctus, hendrerit non turpis. Vivamus nec cursus ex, id porttitor purus. Morbi malesuada luctus ante at congue. Suspendisse potenti. Mauris laoreet facilisis pharetra. Nam sit amet pellentesque turpis.</p>
+					</div>
 				</div>
-			</div>
-		</div>
+			</section>
 
-		<div class="container"> 
-			<div class="row vcenter">
-				<div class="col-md-3"> 
-					<img class="tem1" src= "img/photo_temoignage_1.jpg"/>
+			<section id="video">
+				<div class="row" id="video">
+					<div class="col-xs-12 col-sm-6 col-md-6">
+						<h2>une ecole de code et une startup</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vestibulum ipsum ut varius ullamcorper. Quisque quis feugiat dolor, vel rhoncus elit. Nunc vel ultrices ipsum. Nullam eu neque interdum, gravida libero sit amet, bibendum velit. Suspendisse suscipit, risus in vulputate hendrerit, mi nisi elementum odio, et venenatis sem nibh vel ligula. Duis dignissim dignissim mattis. Fusce sit amet ligula odio.</p>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-6" id="vid">
+						<div class="video-container">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/p7Yoj96nuhA" frameborder="0" allowfullscreen></iframe>
+						</div>
+					</div>
 				</div>
-				<div class="col-md-9">
-					<p class="paragraph" text align="right" >
-					Sed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de amicitia. Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens (sic enim est habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium loqui ipsum putes.>>
-					<br><br>Prénom Nom, Age, promo n°2
-					</p>
-				</div>
-			</div>
-			<div class="row vcenter2">
-				<div class="col-md-9 texte-left">
-					<p class="para" text align="right">
-					Sed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de amicitia. Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens (sic enim est habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium loqui.>>
-					<br><br>Prénom Nom, Age, promo n°2
-					</p>
-				</div>
-				<div class="col-md-3">
-					<img class="tem2" src="img/photo_temoignage_2.jpg"/>
-				</div>
-			</div>
-			<div class="row vcenter3">
-				<div class="col-md-3 text-right">
-					<img class= "tem3" src="img/photo_temoignage_3.jpg"/>
-				</div>
-				<div class="col-md-9">
-					<p class="parag" text align="right">
-					Sed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de amicitia. Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens (sic enim est habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium loqui.>>
-					<br><br>Prénom Nom, Age, promo n°2
-					</p>
-				</div>
-			</div>
-		</div>
-			
-		<div class="container" id="event">
-			<h2>suivez nous</h2>
-			<div class="twitter"></div>
+			</section>
 
-		<div class="container" id="evenement"> 
-			<div class="row">
-				<div class="col-xs-12 col-sm-6" id="slider">
-					<p>ICI SERA PLACER LE SLIDER A DEVELOPPER
-					ICI SERA PLACER LE SLIDER A DEVELOPPER
-					ICI SERA PLACER LE SLIDER A DEVELOPPER
-					ICI SERA PLACER LE SLIDER A DEVELOPPER</p>
+			<section id="temoignages">
+				<div class="row">
+					<div class="col-xs-12 col-md-3"> 
+						<img class="tem1" src= "img/photo_temoignage_1.jpg"/>
+					</div>
+					<div class="col-xs-12 col-md-9">
+						<p class="Para">
+						<< HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
+						l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude.>>
+						<br/>Prénom Nom, Age, promo n°2
+						</p>
+					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6" id="newsletter">
-					<p>Abonnez-vous et restez informé ! ;)</p>
-					<form method="#" action="#">
-						<input type="email" placeholder="Entrez votre e-mail"/>
-						<input type="submit" value="->"/>
-					</form>
+				<div class="row">
+					<div class="col-xs-12 col-md-3 col-md-push-9">
+						<img class="tem2" src="img/photo_temoignage_2.jpg"/>
+					</div>
+					<div class="col-xs-12 col-md-9 col-md-pull-3">
+						<p class="Parap">
+						<< HTML, CSS, RUBY, PHP,Javascipt...Pendant 5 mois, 
+						l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude.>>
+						<br/>Prénom Nom, Age, promo n°2
+						</p>
+					</div>
 				</div>
-			</div>
+				<div class="row">
+					<div class="col-xs-12 col-md-3">
+						<img class= "tem3" src="img/photo_temoignage_3.jpg"/>
+					</div>
+					<div class="col-xs-12 col-md-9">
+						<p class="Para">
+						<< HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
+						l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude.>>
+						<br>Prénom Nom, Age, promo n°2
+						</p>
+					</div>
+				</div>
+			</section>
+				
+			<section id="event">
+				<h2>suivez nous</h2>
+				<div class="twitter"></div>
+
+				<div class="row">
+					<div class="col-xs-12 col-sm-6" id="slider">
+						<p>ICI SERA PLACER LE SLIDER A DEVELOPPER
+						ICI SERA PLACER LE SLIDER A DEVELOPPER
+						ICI SERA PLACER LE SLIDER A DEVELOPPER
+						ICI SERA PLACER LE SLIDER A DEVELOPPER</p>
+					</div>
+					<div class="col-xs-12 col-sm-6" id="newsletter">
+						<p>Abonnez-vous et restez informé ! ;)</p>
+						<form method="#" action="#">
+							<input type="email" placeholder="Entrez votre e-mail"/>
+							<input type="submit" value="->"/>
+						</form>
+					</div>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
