--- a/homepage.html
+++ b/homepage.html
@@ -67,16 +67,14 @@
 			</div>   <!--FIN DIV .containre #CONCEPT -->
 		</section>
 
-		<section id="video">
+		<section id="section_video">
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-6">
+				<div class="col-xs-12 col-sm-6 col-md-6 texte" >
 					<h2>une ecole de code et une startup</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vestibulum ipsum ut varius ullamcorper. Quisque quis feugiat dolor, vel rhoncus elit. Nunc vel ultrices ipsum. Nullam eu neque interdum, gravida libero sit amet, bibendum velit. Suspendisse suscipit, risus in vulputate hendrerit, mi nisi elementum odio, et venenatis sem nibh vel ligula. Duis dignissim dignissim mattis. Fusce sit amet ligula odio.</p>
+					<p>HTML, CSS, RUBY, PHP, JavaScript… Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’appretion web dynamique, puis la réalisation d’un projet de fin d’étude.</p>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6" id="vid">
-					<div class="video-container">
-						<iframe width="300" height="169" src="https://www.youtube.com/embed/p7Yoj96nuhA" frameborder="0" allowfullscreen></iframe>
-					</div>
+				<div class="col-xs-12 col-sm-6 col-md-6 video">
+					<img src="img/image_video.png">
 				</div>
 			</div>
 		</section>
@@ -152,7 +150,7 @@
 		<section class="footer">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-2 col-sm-2 col-xs-12">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="first_field">NOTRE MÉTHODE</li>
 							<li>Notre approche pédagogique</li>
@@ -161,7 +159,7 @@
 							<li>L’innovation continue</li>
 						</ul>
 					</div>
-					<div class="col-md-2 col-sm-2 col-xs-12">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="first_field">ÉLÈVES</li>
 							<li>Intégrer l’école</li>
@@ -173,7 +171,7 @@
 							<li>FAQ</li>
 						</ul>
 					</div>
-					<div class="col-md-2 col-sm-2 col-xs-12">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="first_field">PARTENAIRES</li>
 							<li>Faire un projet avec nous</li>
@@ -183,7 +181,7 @@
 							<li>Nos partenaires</li>
 						</ul>
 					</div>
-					<div class="col-md-2 col-sm-2 col-xs-12">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="first_field">OUVRIR UNE ÉCOLE</li>
 							<li>Une école sur votre territoire</li>
@@ -191,7 +189,7 @@
 							<li>La gouvernance</li>
 						</ul>
 					</div>
-					<div class="col-md-2 col-sm-4 col-xs-12">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="first_field">À PROPOS</li>
 							<li>Notre mission</li>
@@ -202,7 +200,7 @@
 							<li>Contact</li>
 						</ul>	
 					</div>
-					<div class="col-md-2 col-sm-1 col-xs-12">
+					<div class="col-md-2 col-sm-4 col-xs-6">
 						<ul>
 							<li class="copyright">Copyright © Innoveduc</li>
 						</ul>
