--- a/homepage.html
+++ b/homepage.html
@@ -40,6 +40,12 @@
 						</div>
 					</div>
 				</div>
+				<div class="row accroche">
+					<h1>Go to the transition</h1>
+				</div>
+				<div class="row bouton">
+					<h2><a href="#" alt="je candidate"><span class"bouton_candidat">&#8249; Je candidate /&#8250;</span></a></h2>
+				</div>
 			</div>
 		</section>
 
@@ -71,7 +77,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-6 texte" >
 					<h2>une ecole de code et une startup</h2>
-					<p>HTML, CSS, RUBY, PHP, JavaScript… Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’appretion web dynamique, puis la réalisation d’un projet de fin d’étude.</p>
+					<p><span>HTML, CSS, RUBY, PHP, JavaScript… Pendant 5 mois, l’enseignement s’organise autour de 4 séquences d’appretion web dynamique, puis la réalisation d’un projet de fin d’étude.</span></p>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 video">
 					<img src="img/image_video.png">
