--- a/homepage.html
+++ b/homepage.html
@@ -102,7 +102,7 @@
 				<div class="col-xs-12 col-md-2 col-md-push-10">
 					<img class="tem2" src="img/photo_temoignage_2.jpg"/>
 				</div>
-				<div class="col-xs-12 col-md-10 col-md-pull-2">
+				<div class="col-xs-12 col-md-4 col-md-offset-6 col-md-pull-2">
 					<p class="Parap">
 					&#171; HTML, CSS, RUBY, PHP,Javascipt...Pendant 5 mois, 
 					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &#187;
