--- a/homepage.html
+++ b/homepage.html
@@ -105,8 +105,8 @@
 				</div>
 				<div class="col-xs-12 col-md-6 col-md offset-4" text-align="center">
 					<p class="Para">
-					&ldquo; HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
-					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &rdquo;
+					&#171; HTML, CSS, RUBY, PHP,Javascript...Pendant 5 mois, 
+					l'enseignement s'organise autour de 4 séquences dapprentissage: réalisation d'un projet de fin étude. &#187;
 					<br/><span>Prénom Nom, Age, promo n°2</span>
 					</p>
 				</div>
